# USTC_CG

./: .gitignore
Homeworks/0_CppPratices/documents/1_BasicDArray/: README.md
Homeworks/0_CppPratices/project/include/: PolynomialList.h
Homeworks/0_CppPratices/project/src/executables/1_BasicDArray/: DArray.cpp
Homeworks/0_CppPratices/project/src/executables/2_EfficientDArray/: DArray.cpp
Homeworks/0_CppPratices/project/src/executables/3_TemplateDArray/: DArray.cpp  DArray.h
Homeworks/0_CppPratices/project/src/libraries/shared/: PolynomialList.cpp
Homeworks/0_CppPratices/project/src/libraries/static/: PolynomialMap.cpp
Homeworks/1_MiniDraw/documents/example/src/example/: CMakeLists.txt
Homeworks/1_MiniDraw/project/src/App/: Elli.cpp  Elli.h  Line.cpp  Poly.cpp  Poly.h  Rect.cpp  main.cpp  minidraw.cpp  minidraw.h  shape.h  viewwidget.cpp  viewwidget.h
Homeworks/2_ImageWarping/project/: CMakeLists.txt
Homeworks/2_ImageWarping/project/src/App/: CMakeLists.txt  ImageWidget.cpp  ImageWidget.h  mainwindow.cpp  mainwindow.h
Homeworks/3_PoissonImageEditing/project/: CMakeLists.txt
Homeworks/3_PoissonImageEditing/project/src/App/: CMakeLists.txt  ImageWidget.cpp  ImageWidget.h  Poisson.cpp  Poisson.h  PoissonSolver.cpp  PoissonSolver.h  Polygon.cpp  ScanLine.cpp  ScanLine.h  mainwindow.cpp  mainwindow.h
Homeworks/4_MinSurfMeshPara/project/include/Engine/MeshEdit/: Paramaterize.h
Homeworks/7_SimulationTaichi/project/src/app/: main.cpp
Homeworks/8_Shader/project/data/shaders/: dn.vert  light_dn.frag  light_shadow.frag
(+5 files in other folders)
